Fixed account request name

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -338,8 +338,8 @@ font-style: italic;
     <div class="method-path">
     <a class="up" href="#__Methods">Up</a>
     <pre class="delete"><code class="huge"><span class="http-method">delete</span> /accountUrl</code></pre></div>
-    <div class="method-summary">Delete Account. (<span class="nickname">accountUrlDelete</span>)</div>
-    <div class="method-notes">See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#account-delete-request">Account Delete Request</a>.</div>
+    <div class="method-summary">Unregister Account. (<span class="nickname">accountUrlDelete</span>)</div>
+    <div class="method-notes">See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#account-unregister-request">Account Unregister Request</a>.</div>
 
 
 
@@ -2981,8 +2981,8 @@ font-style: italic;
     <div class="method-path">
     <a class="up" href="#__Methods">Up</a>
     <pre class="delete"><code class="huge"><span class="http-method">delete</span> /accountUrl</code></pre></div>
-    <div class="method-summary">Delete Account. (<span class="nickname">accountUrlDelete</span>)</div>
-    <div class="method-notes">See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#account-delete-request">Account Delete Request</a>.</div>
+    <div class="method-summary">Unregister Account. (<span class="nickname">accountUrlDelete</span>)</div>
+    <div class="method-notes">See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#account-unregister-request">Account Unregister Request</a>.</div>
 
 
 
