Fixed delete request descriptions

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -2238,8 +2238,8 @@ font-style: italic;
     <div class="method-path">
     <a class="up" href="#__Methods">Up</a>
     <pre class="delete"><code class="huge"><span class="http-method">delete</span> /publishedProviderUrl</code></pre></div>
-    <div class="method-summary">Delete Published Provider. (<span class="nickname">publishedProviderUrlDelete</span>)</div>
-    <div class="method-notes">See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#published-provider-delete-request">Published Provider Delete Request</a>.</div>
+    <div class="method-summary">Unregister Published Provider. (<span class="nickname">publishedProviderUrlDelete</span>)</div>
+    <div class="method-notes">See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#published-provider-unregister-request">Published Provider Unregister Request</a>.</div>
 
 
 
@@ -3199,8 +3199,8 @@ font-style: italic;
     <div class="method-path">
     <a class="up" href="#__Methods">Up</a>
     <pre class="delete"><code class="huge"><span class="http-method">delete</span> /subscriptionUrl</code></pre></div>
-    <div class="method-summary">Delete Subscription. (<span class="nickname">subscriptionUrlDelete</span>)</div>
-    <div class="method-notes">See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#subscription-delete-request">Subscription Delete Request</a>.</div>
+    <div class="method-summary">Unregister Subscription. (<span class="nickname">subscriptionUrlDelete</span>)</div>
+    <div class="method-notes">See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#subscription-unregister-request">Subscription Unregister Request</a>.</div>
 
 
 
@@ -4140,8 +4140,8 @@ font-style: italic;
     <div class="method-path">
     <a class="up" href="#__Methods">Up</a>
     <pre class="delete"><code class="huge"><span class="http-method">delete</span> /serviceCredentialUrl</code></pre></div>
-    <div class="method-summary">Delete Service Credential. (<span class="nickname">serviceCredentialUrlDelete</span>)</div>
-    <div class="method-notes">See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#service-credential-delete-request">Service Credential Delete Request</a>.</div>
+    <div class="method-summary">Unregister Service Credential. (<span class="nickname">serviceCredentialUrlDelete</span>)</div>
+    <div class="method-notes">See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#service-credential-unregister-request">Service Credential Unregister Request</a>.</div>
 
 
 
@@ -4347,8 +4347,8 @@ font-style: italic;
     <div class="method-path">
     <a class="up" href="#__Methods">Up</a>
     <pre class="delete"><code class="huge"><span class="http-method">delete</span> /sourceUrl</code></pre></div>
-    <div class="method-summary">Delete Source. (<span class="nickname">sourceUrlDelete</span>)</div>
-    <div class="method-notes">See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#source-delete-request">Source Delete Request</a>.</div>
+    <div class="method-summary">Unregister Source. (<span class="nickname">sourceUrlDelete</span>)</div>
+    <div class="method-notes">See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#source-unregister-request">Source Unregister Request</a>.</div>
 
 
 
