--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -1143,12 +1143,33 @@ font-style: italic;
     <h3 class="field-label">Example data</h3>
     <div class="example-data-content-type">Content-Type: application/json</div>
     <pre class="example"><code>{
+  "consentRequestTime" : 5,
+  "persistentId" : { },
+  "consentRequestSignature" : "http://example.com/aeiou",
+  "consentId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
+  "auditLog" : [ {
+    "signature" : "signature",
+    "time" : 1,
+    "status" : {
+      "new" : "new",
+      "old" : "old"
+    }
+  }, {
+    "signature" : "signature",
+    "time" : 1,
+    "status" : {
+      "new" : "new",
+      "old" : "old"
+    }
+  } ],
+  "dataTypeUrl" : "http://example.com/aeiou",
   "links" : {
     "candidates" : "http://example.com/aeiou",
     "sources" : "http://example.com/aeiou",
     "self" : "http://example.com/aeiou",
     "subscription" : "http://example.com/aeiou"
   },
+  "publishedServiceUrl" : "http://example.com/aeiou",
   "state" : "state",
   "activeFrom" : 0,
   "activeUntil" : 6
@@ -4541,7 +4562,9 @@ font-style: italic;
     <li><a href="#ConsentCredentialModel"><code>ConsentCredentialModel</code> - </a></li>
     <li><a href="#ConsentCredentialModel_links"><code>ConsentCredentialModel_links</code> - </a></li>
     <li><a href="#ConsentModel"><code>ConsentModel</code> - </a></li>
+    <li><a href="#ConsentModel_auditLog"><code>ConsentModel_auditLog</code> - </a></li>
     <li><a href="#ConsentModel_links"><code>ConsentModel_links</code> - </a></li>
+    <li><a href="#ConsentModel_status"><code>ConsentModel_status</code> - </a></li>
     <li><a href="#ConsentNotificationMessageModel_payload"><code>ConsentNotificationMessageModel_payload</code> - </a></li>
     <li><a href="#ConsentRequestMessageModel_payload"><code>ConsentRequestMessageModel_payload</code> - </a></li>
     <li><a href="#ConsentsModel"><code>ConsentsModel</code> - </a></li>
@@ -4784,8 +4807,24 @@ font-style: italic;
     <div class="field-items">
       <div class="param">activeFrom </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Active from date time stamp. format: Unix time in ms</div>
 <div class="param">activeUntil </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Active until date time stamp. format: Unix time in ms, nullable</div>
+<div class="param">auditLog (optional)</div><div class="param-desc"><span class="param-type"><a href="#ConsentModel_auditLog">array[ConsentModel_auditLog]</a></span> Audit log. </div>
+<div class="param">consentId </div><div class="param-desc"><span class="param-type"><a href="#UUID">UUID</a></span> Consent Id. format: uuid</div>
+<div class="param">consentRequestSignature </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Signature of the Service Provider over the consentId, dataTypeUrl, publishedServiceUrl, consentRequestedTime and persistentId. format: url</div>
+<div class="param">consentRequestTime </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Consent request time. format: Unix time in ms</div>
+<div class="param">dataTypeUrl </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> The Personal Data that the Service Provider requests Consent for (dataTypeUrl). format: url</div>
 <div class="param">links </div><div class="param-desc"><span class="param-type"><a href="#ConsentModel_links">ConsentModel_links</a></span>  </div>
+<div class="param">persistentId </div><div class="param-desc"><span class="param-type"><a href="#PersistentIdModel">PersistentIdModel</a></span> Persistent Id of the connection between the Relying Party and the Individual. </div>
+<div class="param">publishedServiceUrl </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> The Service that the Service Provider intends to use the Personal Data for (publishedServiceUrl). format: url</div>
 <div class="param">state </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> State of the consent. </div>
+    </div>  <!-- field-items -->
+  </div>
+  <div class="model">
+    <h3><a name="ConsentModel_auditLog"><code>ConsentModel_auditLog</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'>Audit log entry.</div>
+    <div class="field-items">
+      <div class="param">time </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Time of status change. format: Unix time in ms</div>
+<div class="param">status (optional)</div><div class="param-desc"><span class="param-type"><a href="#ConsentModel_status">ConsentModel_status</a></span>  </div>
+<div class="param">signature (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Confirmation signature by the Service Provider over the consentId, the new status and the time of the change. </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
@@ -4796,6 +4835,14 @@ font-style: italic;
 <div class="param">self </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Consent Url format: url</div>
 <div class="param">sources (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Sources (sourcesUrl) format: url</div>
 <div class="param">subscription </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Subscription (subscriptionUrl). format: url</div>
+    </div>  <!-- field-items -->
+  </div>
+  <div class="model">
+    <h3><a name="ConsentModel_status"><code>ConsentModel_status</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'>Status change.</div>
+    <div class="field-items">
+      <div class="param">new (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> New status. </div>
+<div class="param">old (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Old status. </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
@@ -4810,10 +4857,14 @@ font-style: italic;
     <h3><a name="ConsentRequestMessageModel_payload"><code>ConsentRequestMessageModel_payload</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     
     <div class="field-items">
-      <div class="param">consent (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Consent Url (consentUrl). format: url</div>
+      <div class="param">consentUrl (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Consent Url (consentUrl). format: url</div>
+<div class="param">consentId </div><div class="param-desc"><span class="param-type"><a href="#UUID">UUID</a></span> Consent Id. format: uuid</div>
+<div class="param">consentRequestSignature </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Signature of the Service Provider over the consentId, dataTypeUrl, publishedServiceUrl, consentRequestedTime and persistentId. format: url</div>
+<div class="param">consentRequestTime </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Consent request time. format: Unix time in ms</div>
 <div class="param">credential (optional)</div><div class="param-desc"><span class="param-type"><a href="#ConsentCredentialModel">ConsentCredentialModel</a></span> Consent Individual Credential. </div>
-<div class="param">data </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> The Personal Data that the Service Provider requests Consent for (dataTypeUrl). format: url</div>
-<div class="param">service </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> The Service that the Service Provider intends to use the Personal Data for (publishedServiceUrl). format: url</div>
+<div class="param">dataTypeUrl </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> The Personal Data that the Service Provider requests Consent for (dataTypeUrl). format: url</div>
+<div class="param">persistentId </div><div class="param-desc"><span class="param-type"><a href="#PersistentIdModel">PersistentIdModel</a></span> Persistent Id of the connection between the Relying Party and the Individual. </div>
+<div class="param">publishedServiceUrl </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> The Service that the Service Provider intends to use the Personal Data for (publishedServiceUrl). format: url</div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
